fix(android): code optimizations (#13765)